--- a/spring-petclinic/src/main/resources/application-mysql.properties
+++ b/spring-petclinic/src/main/resources/application-mysql.properties
@@ -1,7 +1,10 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
-spring.datasource.username=${MYSQL_USER:petclinic}
-spring.datasource.password=${MYSQL_PASS:petclinic}
-# SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS} 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/petclinic?useUnicode=true
+spring.jpa.database=MYSQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=none
